--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
 # These individuals contributed to the hbnb project in this repository 
-Benson Mwangi <bensonmwangi101@gmail.com>
-Benjamin Musyoki <>
 
+Ezra Nobrega <ezra.nobrega@outlook.com>
+Justin Majetich <justinmajetich@gmail.com>
